--- a/docs/main.css
+++ b/docs/main.css
@@ -12,6 +12,28 @@ body {
   background-color: white;
   margin: 5px;
 }
+#meals-orders {
+  display: flex;
+}
+
+#header {
+  height: 40px;
+  background-color: #000000;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+#cerrar-btn {
+  height: 30px;
+  background: none;
+  color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 5px;
+  margin-right: 10px;
+  cursor: pointer;
+  font-size: 15px;
+}
 #meals {
   margin-left: 0px;
 }
